[gd_scene load_steps=3 format=3 uid="uid://chijsak3mwkre"]

[ext_resource type="Script" uid="uid://b2sb1xuhrt0ch" path="res://ui/recording_ui.gd" id="1_w41lp"]
[ext_resource type="Texture2D" uid="uid://c5sjig1xq0olg" path="res://assets/keyboard_numpad_enter_outline.png" id="2_jsmmp"]

[node name="RecordingUI" type="Control"]
custom_minimum_size = Vector2(200, 65)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w41lp")

[node name="RecordButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 65)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24

[node name="HBoxContainer" type="HBoxContainer" parent="RecordButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="RecordButton/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_jsmmp")
expand_mode = 3
stretch_mode = 4

[node name="Label" type="Label" parent="RecordButton/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RECORD"

[connection signal="pressed" from="RecordButton" to="." method="_on_record_button_pressed"]
